# agent-inject

./: .env.example  .gitattributes  .gitignore  .license-header.txt  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  README.md  ROADMAP.md  SECURITY.md  config.toml.example  data.json  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  publish.yml  scorecard.yml
docs/: architecture.md  atlas-mapping.md
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_202a5b0b27070188___init___py.html  z_202a5b0b27070188_base_py.html  z_202a5b0b27070188_loader_py.html  z_202a5b0b27070188_registry_py.html  z_6bca74725d965105___init___py.html  z_6bca74725d965105_cli_py.html  z_6bca74725d965105_config_py.html  z_6bca74725d965105_detection_py.html  z_6bca74725d965105_engine_py.html  z_6bca74725d965105_models_py.html  z_6bca74725d965105_paths_py.html  z_84c85ac861310f93___init___py.html  z_84c85ac861310f93_base_py.html  z_84c85ac861310f93_llm_judge_py.html  z_a271cf8da86aac20___init___py.html  z_a271cf8da86aac20_transforms_py.html  z_aa56978e64adbf7e___init___py.html  z_aa56978e64adbf7e_base_py.html  z_c4dec66553522603___init___py.html  z_c4dec66553522603_rest_py.html  z_cd0cd068075350f8___init___py.html  z_cd0cd068075350f8_base_py.html  z_cd0cd068075350f8_crescendo_py.html
src/agent_inject/: __init__.py  __main__.py  cli.py  config.py  detection.py  engine.py  models.py  paths.py
src/agent_inject/attacks/: __init__.py  base.py  loader.py  registry.py
src/agent_inject/data/detection/: compliance.yaml  refusal.yaml
src/agent_inject/data/payloads/benchmarks/: agentdojo.yaml  asb.yaml  injecagent.yaml  mcptox.yaml
src/agent_inject/data/payloads/direct/: ignore_previous.yaml
src/agent_inject/data/payloads/memory/: memory_poisoning.yaml
src/agent_inject/data/payloads/refusal/: refusal_gradient.yaml
src/agent_inject/evasion/: __init__.py  transforms.py
src/agent_inject/harness/: __init__.py  base.py
src/agent_inject/harness/adapters/: __init__.py  rest.py
src/agent_inject/scorers/: __init__.py  base.py  llm_judge.py
src/agent_inject/strategies/: __init__.py  base.py  crescendo.py
tests/: __init__.py  conftest.py  test_annotation_resolution.py  test_detection.py  test_engine.py  test_paths.py
tests/fuzz/: __init__.py  fuzz_evasion.py  fuzz_yaml_loader.py
tests/test_attacks/: test_loader.py  test_models.py  test_registry.py
tests/test_cli/: test_commands.py  test_config.py
tests/test_evasion/: test_transforms.py
tests/test_harness/: test_base_adapter.py  test_rest_adapter.py
tests/test_scorers/: test_llm_judge.py  test_refusal.py  test_scorers.py
tests/test_strategies/: test_base.py  test_crescendo.py
