[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-inject"
version = "0.1.1"
description = "Offensive testing framework for AI agent systems"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
authors = [
    { name = "Isaac Schepp" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 2",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.24",
    "rich>=13.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.0",
    "httpx>=0.27,<1",
    "pyyaml>=6.0",
    "rapidfuzz>=3.0",
]
keywords = [
    "security",
    "ai",
    "llm",
    "prompt-injection",
    "red-team",
    "offensive-security",
    "agent",
    "mcp",
]

[project.optional-dependencies]
openai = ["openai>=2.0,<3.0"]
anthropic = ["anthropic>=0.47"]
langchain = ["langchain>=1.2"]
all-providers = [
    "agent-inject[openai]",
    "agent-inject[anthropic]",
    "agent-inject[langchain]",
]

[project.urls]
Homepage = "https://github.com/isaacschepp/agent-inject"
Repository = "https://github.com/isaacschepp/agent-inject"
Issues = "https://github.com/isaacschepp/agent-inject/issues"

[project.scripts]
agent-inject = "agent_inject.cli:app"

[dependency-groups]
dev = [
    { include-group = "tests" },
    { include-group = "linting" },
    { include-group = "typechecking" },
]
tests = [
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
    "pytest-cov>=6.0",
    "pytest-mock>=3.14",
    "pytest-xdist>=3.6.1",
    "pytest-randomly>=3.16",
    "pytest-timeout>=2.3",
    "coverage[toml]>=7",
    "hypothesis>=6.0",
    "respx>=0.22",
]
linting = [
    "ruff>=0.15",
    "pre-commit>=4.0",
]
typechecking = [
    "pyright>=1.1",
]
docs = [
    "mkdocs-material>=9.7",
    "mkdocstrings[python]>=0.30",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agent_inject"]

[tool.ruff]
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Formatter conflicts (mandatory)
    "COM812",  # missing-trailing-comma — formatter handles commas
    "ISC001",  # single-line-implicit-string-concatenation — conflicts with formatter
    # Docstring rules (deferred to separate issue)
    "D100",    # undocumented-public-module
    "D101",    # undocumented-public-class
    "D102",    # undocumented-public-method
    "D103",    # undocumented-public-function
    "D104",    # undocumented-public-package
    "D105",    # undocumented-magic-method
    "D107",    # undocumented-public-__init__
    "D203",    # incorrect-blank-line-before-class (conflicts with D211)
    "D213",    # multi-line-summary-second-line (conflicts with D212)
    # Annotations (pyright strict handles these better)
    "ANN",     # flake8-annotations — redundant with pyright strict mode
    # Intentional patterns in this codebase
    "PLC0415", # import-outside-top-level — lazy imports for circular import avoidance
    "PLW0603", # global-statement — thread-safe registry uses global with lock
    "PLR0913", # too-many-arguments — Typer CLI and engine signatures are inherently wide
    "PLR2004", # magic-value-comparison — literal numbers are clearer in test assertions
    "FBT",     # flake8-boolean-trap — Typer uses boolean flags as positional CLI args
    "TRY003",  # long-exception-messages — we use descriptive f-string error messages
    "FIX",     # fixme/todo markers — we use TODO/XXX intentionally
    "TD002",   # missing-todo-author
    "TD003",   # missing-todo-issue-link
    "ERA001",  # commented-out-code — occasional explanatory pseudo-code in comments
    # Not applicable to this project
    "DJ",      # flake8-django
    "PD",      # pandas-vet
    "NPY",     # numpy-specific
    "AIR",     # Airflow-specific
    "FAST",    # FastAPI-specific
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S",       # security rules (test code uses hardcoded values, assert, etc.)
    "ARG",     # unused-arguments (stub implementations and fixtures)
    "BLE",     # blind-except (testing exception handling)
    "EM",      # error-message formatting (test assertions don't need extracted messages)
    "TRY",     # tryceratops (test exception patterns are intentionally simple)
    "PLW0108", # unnecessary-lambda (lambda stubs in test doubles)
    "SLF001",  # private-member-access (tests verify internal state)
    "PT011",   # pytest-raises-too-broad (some tests intentionally catch broad exceptions)
    "D",       # docstrings (defer for tests)
    "TC",      # type-checking imports (not worth optimizing in tests)
]
"src/agent_inject/evasion/**" = ["RUF001"]

[tool.ruff.lint.isort]
known-first-party = ["agent_inject"]

[tool.ruff.format]
docstring-code-format = true

[tool.pyright]
include = ["src"]
pythonVersion = "3.12"
strict = ["src/agent_inject"]
reportImplicitOverride = true
reportUnnecessaryTypeIgnoreComment = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
xfail_strict = true
timeout = 10
addopts = [
    "--strict-config",
    "--strict-markers",
    "-rxXs",
]
filterwarnings = [
    "error",
    "ignore:unclosed event loop:ResourceWarning",
    "ignore:unclosed.*socket:ResourceWarning",
]

[tool.coverage.run]
source = ["agent_inject"]
branch = true
relative_files = true
parallel = true
omit = ["src/agent_inject/__main__.py"]

[tool.coverage.report]
fail_under = 95
precision = 2
show_missing = true
exclude_also = [
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
    "raise NotImplementedError",
    "@overload",
    "if __name__ == .__main__.",
    "\\.\\.\\.",
    "except ImportError:",
]
